--- a/NoFrameWork/dropdown.html
+++ b/NoFrameWork/dropdown.html
@@ -39,7 +39,7 @@
             height: 40px;
         }
         body{
-            background-color: beige;
+            background-color: rgb(205, 232, 230);
         }
     </style>
 </head>
