create index file

--- a/no-framework/BulmaLayout.html
+++ b/no-framework/BulmaLayout.html
@@ -48,7 +48,7 @@
     <div class="columns">
         <div class="column">
         <h2>.</h2> 
-        <p>today</p><br><br><p>MONDAY Sept.12 namjooning</p>
+        <p>today</p><br><br><p>MONDAY Sept.12</p>
         <br>
        
     </div>
